--- a/W4D3/position_media_queries/assets/advanced_selectors.css
+++ b/W4D3/position_media_queries/assets/advanced_selectors.css
@@ -1,36 +1,30 @@
-/* Introduction to Cascading Style Sheets */
-
 body {
-  /* If the user cannot load the Arial font, the sans-serif font is used */
   font-family: Arial, sans-serif;
   background-color: #FEFFF1;
+  margin: 0 auto;
+  width: 60%;
 }
 
 h1 {
   font-size: 38px;
+  margin-bottom: 10px;
 }
 
 h2 {
   font-size: 32px;
 }
 
-/* This selector selects ALL anchor tag children of ALL list elements that
-are children of an Unordered Lsit element */
 ul li a, figcaption a {
   text-decoration: none;
   color: inherit;
 }
 
-/* This selector selects only IMMEDIATE (1 level deep) image element children
-of the header element */
 header > img {
   width: 100px;
+  float: left;
 }
 
-/* Selects all elements with the class attribute "ingredients-list" */
 .ingredients-list {
-
-  /* The list style property is shorthand for multiple list-style properties*/
   list-style: square inside;
 }
 
@@ -44,30 +38,30 @@ ol {
 }
 
 input[type="radio"] {
-    -webkit-appearance: none;
-    width: 27px;
-    height: 27px;
-    background-image: url(./stars.png);
-    vertical-align: bottom;
+  -webkit-appearance: none;
+  width: 27px;
+  height: 27px;
+  background-image: url(stars.png);
+  vertical-align: bottom;
 }
 
 input[type="radio"]:checked {
   background-position: 30px 30px;
 }
 
-
-input:last-child {
-    background: gold;
+input[type="submit"]:last-child {
+  background: gold;
 }
 
 input:last-child:hover {
-    -webkit-filter: brightness(90%);
+  -webkit-filter: brightness(90%);
 }
 
 ol li:nth-of-type(2n) {
   background-color: whitesmoke;
+  margin: 10px 0;
 }
 
 h2 + .user_review {
-    border-top: 1px solid black;
+  border-top: 1px solid black;
 }
